healthcare-plus/force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Patient Visit</fullName>
            </value>
            <value>
                <fullName>Follow-Up Visit</fullName>
            </value>
            <value>
                <fullName>Annual Physical / Wellness Exam</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Emergency Visit</fullName>
            </value>
            <value>
                <fullName>Telehealth / Virtual Visit</fullName>
            </value>
            <value>
                <fullName>Lab Test / Diagnostic Test</fullName>
            </value>
            <value>
                <fullName>Imaging / Radiology (X-ray, MRI, CT, Ultrasound)</fullName>
            </value>
            <value>
                <fullName>Procedure / Minor Surgery</fullName>
            </value>
            <value>
                <fullName>Therapy Session (Physical, Occupational, Speech)</fullName>
            </value>
            <value>
                <fullName>Prenatal Visit</fullName>
            </value>
            <value>
                <fullName>Post-Operative Visit</fullName>
            </value>
            <value>
                <fullName>Vaccination / Immunization</fullName>
            </value>
            <value>
                <fullName>Medication Management</fullName>
            </value>
            <value>
                <fullName>Counseling / Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Preventive Screening</fullName>
            </value>
            <value>
                <fullName>Specialty Consultation (Cardiology, Oncology, etc.)</fullName>
            </value>
            <value>
                <fullName>Check-In / Triage</fullName>
            </value>
            <value>
                <fullName>Walk-In / Same-Day Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>