healthcare-plus/force-app/main/default/objects/Appointment__c/fields/Clinical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Notes__c</fullName>
    <label>Clinical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>