healthcare-plus/force-app/main/default/objects/Appointment__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration Minutes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Mins</fullName>
            </value>
            <value>
                <fullName>30 Mins</fullName>
            </value>
            <value>
                <fullName>45 Mins</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>