healthcare-plus/force-app/main/default/objects/Appointment__c/fields/Vitals_Taken__c.field-meta.xml
<CustomField>
    <fullName>Vitals_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitals Taken</label>
    <type>Checkbox</type>
</CustomField>